<resources>
    <string name="app_name">E-Cüzdan Plus</string>
    <string name="app_title">E-Wallet Plus</string>
    <string name="current_balance">Güncel Bakiyeniz</string>
    <string name="wallet_name">Cüzdan Adı: </string>
    <string name="add_balance">Bakiye Ekle </string>
    <string name="add_expence">Harcama Gir </string>
    <string name="add_wallet">Cüzdan Ekle </string>
    <string name="wallet_name_hint">Cüzdan Adı </string>
    <string name="wallet_amount_hint">Bakiye Miktarı </string>
    <string name="spend_title">Tanım </string>
    <string name="spend_amount">Miktar </string>
    <string name="save">Kaydet </string>
    <string name="last_spends_title">Son İşlemler </string>
    <string name="operations">İşlemler </string>
    <string name="wallet_delete_dialog_title">Cüzdan Silinsin mi? </string>
    <string name="spend_delete_dialog_title">Harcama Silinsin mi? </string>
    <string name="yes">Evet </string>
    <string name="no">Hayır </string>
    <string name="moneyBox">Kumbara </string>

</resources>